# synchub-desktop

./: Cargo.toml  README.md  build.rs
.github/workflows/: desktop-release.yml
scripts/: build-release.ps1  generate-changelog.ps1  generate-icons.ps1  verify-release.ps1
src/: app.rs  assets.rs  client.rs  config.rs  lib.rs  main.rs  models.rs  native_daemon.rs  native_doctor.rs  native_download.rs  native_manifest.rs  native_sync.rs  native_trash.rs  sync_commands.rs  theme.rs
src/app/: commands.rs  controller.rs  formatting.rs  time.rs  view.rs
tests/: model_tests.rs
