[package]
name = "synchub-desktop"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
directories = "6.0"
gpui = { git = "https://github.com/zed-industries/zed", rev = "7a8f13902982b087e6e27e4d105e9595b26b9429" }
gpui-component = { git = "https://github.com/longbridge/gpui-component", rev = "5b51aaa5d8f3c6308ce977b2e74eba3d08bd35c0" }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component", rev = "5b51aaa5d8f3c6308ce977b2e74eba3d08bd35c0" }
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "7a8f13902982b087e6e27e4d105e9595b26b9429", features = ["font-kit"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

[build-dependencies]
winres = "0.1"
