[package]
name = "synchub-desktop"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0"
directories = "6.0"
gpui = { git = "https://github.com/zed-industries/zed" }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.20"
tokio = { version = "1.0", features = ["full"] }

[build-dependencies]
winres = "0.1"
